K8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-registry
  labels:
    istio-injection: enabled
