K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-registry
  namespace: student-registry
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: student-registry
  template:
    metadata:
      labels:
        app: student-registry
    spec:
      containers:
        - name: student-registry
          image: abhinav304/student-registry:LX1pWENeQvGiundwp33GKw
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: data
          emptyDir: {}
