K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-registry-svc
  namespace: student-registry
spec:
  selector:
    app: student-registry
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
